v. 0.2.0
 * DocumentChunk class refactored into a full class, with equality method and
   as_dict()
 * Refactored dump code; dump to JSON
 * when dumping to JSON & YAML dump non-structural context fields (and skip
   structural context)
 * modified tree & sequence iteration: changed automatic id assignment
 * new class method from_dict() in PiiInstance
 * when reading a PiiCollection from file, recreate PiiInstance objects
 * wrapper load() method for PiiCollectionLoader
 * add_chunk() method for LocalSrcDocument objects (sequence, table & tree)
 * new LocalSrcDocumentFile dispatcher class
 * openfile: allow file-like objects as argument
 * fixed newlines in text output
 * added json dump to object
 * some bugfixes

v. 0.1.0
 * updated for data spec 0.4.0
 * added two iterators
    - iter_full, including iteration with context
    - iter_struct
 * renamed SourceDocument to SrcDocument
 * local load/dump split from SrcDocument, into a LocalSrcDocument class +
   a module function
 * added base classes for table, tree & sequence docs
 * chunk payload change from `text` to `data`, to make it more generic
 * added format indicator strings to output dump

v. 0.0.3
 * added BaseSourceDocument and BaseSourceDocument classes
 * minor fixes in other data structures