@@ -1,2 +1,2 @@
 # Package version
-VERSION = "0.2.0"
+VERSION = "0.1.3"
