@@ -1,0 +1,8 @@
+{
+  "format": "piisa:foo:blurb:v1",
+  "foo": "bar",
+  "foodict": {
+    "bar1": null,
+    "bar2": 43
+  }
+}
